# CIMHadamard

./: .gitignore  README.md  pyproject.toml
src/cimhwt/: __init__.py  bits.py  charge.py  cim.py  cli.py  engine_charge.py  engine_xbar.py  fwht.py  hadamard.py
src/cimhwt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_core.py
