[project]
name = "cimhwt"
version = "0.1.0"
description = "Compute-in-memory Hadamard Transform simulator"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
